--- a/src/styles/MainContent.css
+++ b/src/styles/MainContent.css
@@ -49,6 +49,7 @@ h4 {
 }
 
 .signup-form input[type="text"],
+.signup-form input[type="email"],
 .signup-form input[type="password"],
 .signup-form input[type="date"] {
   width: 100%;
@@ -61,12 +62,14 @@ h4 {
 }
 
 .signup-form input[type="text"]:hover,
+.signup-form input[type="email"]:hover,
 .signup-form input[type="password"]:hover,
 .signup-form input[type="date"]:hover {
   border-color: #4267B2;
 }
 
 .signup-form input[type="text"]:focus,
+.signup-form input[type="email"]:focus,
 .signup-form input[type="password"]:focus,
 .signup-form input[type="date"]:focus {
   border-color: #4267B2;
